chain/connector/src/connector/snapshots/hopr_chain_connector__connector__tickets__tests__connector_should_not_redeem_ticket_on_non_existing_channel.snap
---
source: chain/connector/src/connector/tickets.rs
expression: "*connector.client().snapshot()"
---
accounts:
  1:
    chain_key: 668430def9eacd2b5064acf85d73fb0b351a1c8c
    keyid: 1
    multi_addresses: []
    packet_key: 3f6b51c1158631d57d2ecfe0cc49396de92be26bcea89b77cd60223f1023f1a0
    safe_address: "0101010101010101010101010101010101010101"
  2:
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    keyid: 2
    multi_addresses: []
    packet_key: 4b8f66f9df296e7d7c2280d9c833c879297ee9d435d6e075d46fad5717211b72
    safe_address: "0202020202020202020202020202020202020202"
native_balances:
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: NativeBalance
    balance: 1 xDai
  "0101010101010101010101010101010101010101":
    __typename: NativeBalance
    balance: 0 xDai
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: NativeBalance
    balance: 1 xDai
  "0202020202020202020202020202020202020202":
    __typename: NativeBalance
    balance: 0 xDai
token_balances:
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: HoprBalance
    balance: 0 wxHOPR
  "0101010101010101010101010101010101010101":
    __typename: HoprBalance
    balance: 100 wxHOPR
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: HoprBalance
    balance: 0 wxHOPR
  "0202020202020202020202020202020202020202":
    __typename: HoprBalance
    balance: 100 wxHOPR
safe_allowances:
  "0101010101010101010101010101010101010101":
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
  "0202020202020202020202020202020202020202":
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
deployed_safes:
  "0101010101010101010101010101010101010101":
    address: "0101010101010101010101010101010101010101"
    chain_key: 668430def9eacd2b5064acf85d73fb0b351a1c8c
    module_address: 463977c851087dca6e69d488fbd69dbad3ffc7fe
    registered_nodes: []
  "0202020202020202020202020202020202020202":
    address: "0202020202020202020202020202020202020202"
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    module_address: ff263744a4621e2cac0f4882cc623bee3c9aef8d
    registered_nodes: []
tx_counts: {}
channels:
  e555945b137ef926702c021fa24104e2268de40641e63b8b747019b09e100802:
    balance: 0.00000000000000001 wxHOPR
    closure_time: ~
    concrete_channel_id: e555945b137ef926702c021fa24104e2268de40641e63b8b747019b09e100802
    destination: 1
    epoch: 1
    source: 2
    status: OPEN
    ticket_index: "1"
chain_info:
  channel_closure_grace_period: "300"
  channel_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  block_number: 1
  chain_id: 100
  ledger_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  min_ticket_winning_probability: 1
  key_binding_fee: 0.01 wxHOPR
  safe_registry_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  ticket_price: 1 wxHOPR
  network: rotsee
  contract_addresses: "{\"announcements\":\"0x225b4b6FFe08228db1182946b5F9e905f1A19A4D\",\"channels\":\"0x69E63A01a2209F733C83ECa619ddDa2BEA4d5Cdf\",\"module_implementation\":\"0x1167FB204298799B0B9E98896D58958cAEd164B0\",\"node_safe_migration\":\"0x74dfCdF50340b772696cAeF3F3Bc4cD776D37E8A\",\"node_safe_registry\":\"0x0e4e1a2D851663462523bF38Ca56259aceCCBc76\",\"node_stake_factory\":\"0xE9A9cf50534Eb0817F9fBb115E00Bf8463E973Db\",\"ticket_price_oracle\":\"0x147899Ca57111d9081df125C2bcbd839981f04c2\",\"token\":\"0xD4fdec44DB9D44B8f2b6d529620f9C0C7066A2c1\",\"winning_probability_oracle\":\"0x74329f8153cBb33aABdEd79Ee84748fE8923c5E3\"}"
  expected_block_time: "5"
version: "1"
health: OK
active_txs: {}
